--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,14 +9,17 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">SampleSuite</th></tr>
-<tr><td><a href="#t0">SampleTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">25,489</td><td></td><td></td></tr>
+<tr><td><a href="#t0">ModuleOneTest</a></td><td class="num">8</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">3,914</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">SampleSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">SampleTest &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testScripts.Booksearchtest</td><td><a href="#m0">storiesnovel</a></td><td rowspan="1">1744018306185</td><td rowspan="1">2203</td></tr><tr><th colspan="4">SampleTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testScripts.Booksearchtest</td><td><a href="#m1">horrernovel</a></td><td rowspan="1">1744018318170</td><td rowspan="1">2131</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">SampleSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">ModuleOneTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="8">parallelscripts.SampleneTest</td><td><a href="#m0">testone</a></td><td rowspan="6">1744114336032</td><td rowspan="6">5</td></tr><tr class="passedeven"><td><a href="#m1">testone</a></td></tr><tr class="passedeven"><td><a href="#m2">testone</a></td></tr><tr class="passedeven"><td><a href="#m3">testone</a></td></tr><tr class="passedeven"><td><a href="#m4">testone</a></td></tr><tr class="passedeven"><td><a href="#m5">testone</a></td></tr><tr class="passedeven"><td><a href="#m6">testthree</a></td><td rowspan="1">1744114335926</td><td rowspan="1">3753</td></tr><tr class="passedeven"><td><a href="#m7">testtwo</a></td><td rowspan="1">1744114336129</td><td rowspan="1">3612</td></tr></tbody>
 </table>
-<h2>SampleTest</h2><h3 id="m0">testScripts.Booksearchtest#storiesnovel</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
-	at testScripts.Booksearchtest.storiesnovel(Booksearchtest.java:85)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testScripts.Booksearchtest#horrernovel</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>ModuleOneTest</h2><h3 id="m0">parallelscripts.SampleneTest#testone</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">parallelscripts.SampleneTest#testone</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">parallelscripts.SampleneTest#testone</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">parallelscripts.SampleneTest#testone</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">parallelscripts.SampleneTest#testone</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">parallelscripts.SampleneTest#testone</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">parallelscripts.SampleneTest#testthree</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">parallelscripts.SampleneTest#testtwo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
