--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-SampleSuite" class="navigator-link">
-              <span class="suite-name border-failed">SampleSuite</span>
+              <span class="suite-name border-passed">SampleSuite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -92,21 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-SampleSuite" class="hide-methods failed suite-SampleSuite"> (hide)</a> <!-- hide-methods failed suite-SampleSuite -->
-                      <a href="#" panel-name="suite-SampleSuite" class="show-methods failed suite-SampleSuite"> (show)</a> <!-- show-methods failed suite-SampleSuite -->
-                    </span>
-                    <div class="method-list-content failed suite-SampleSuite">
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-SampleSuite" title="testScripts.Booksearchtest" class="method navigator-link" hash-for-method="storiesnovel">storiesnovel</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-SampleSuite -->
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -117,7 +103,42 @@
                     <div class="method-list-content passed suite-SampleSuite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-SampleSuite" title="testScripts.Booksearchtest" class="method navigator-link" hash-for-method="horrernovel">horrernovel</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-SampleSuite" title="parallelscripts.SampleneTest" class="method navigator-link" hash-for-method="testone">testone</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-SampleSuite" title="parallelscripts.SampleneTest" class="method navigator-link" hash-for-method="testone">testone</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-SampleSuite" title="parallelscripts.SampleneTest" class="method navigator-link" hash-for-method="testone">testone</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-SampleSuite" title="parallelscripts.SampleneTest" class="method navigator-link" hash-for-method="testone">testone</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-SampleSuite" title="parallelscripts.SampleneTest" class="method navigator-link" hash-for-method="testone">testone</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-SampleSuite" title="parallelscripts.SampleneTest" class="method navigator-link" hash-for-method="testone">testone</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-SampleSuite" title="parallelscripts.SampleneTest" class="method navigator-link" hash-for-method="testthree">testthree</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-SampleSuite" title="parallelscripts.SampleneTest" class="method navigator-link" hash-for-method="testtwo">testtwo</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-SampleSuite -->
@@ -132,37 +153,66 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-SampleSuite" class="panel SampleSuite">
-          <div class="suite-SampleSuite-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">testScripts.Booksearchtest</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="storiesnovel">
-                  </a> <!-- storiesnovel -->
-                  <span class="method-name">storiesnovel</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
-	at testScripts.Booksearchtest.storiesnovel(Booksearchtest.java:85)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 31 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-SampleSuite-class-failed -->
           <div class="suite-SampleSuite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testScripts.Booksearchtest</span>
+              <span class="class-name">parallelscripts.SampleneTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="horrernovel">
-                  </a> <!-- horrernovel -->
-                  <span class="method-name">horrernovel</span>
+                  <a name="testone">
+                  </a> <!-- testone -->
+                  <span class="method-name">testone</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testone">
+                  </a> <!-- testone -->
+                  <span class="method-name">testone</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testone">
+                  </a> <!-- testone -->
+                  <span class="method-name">testone</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testone">
+                  </a> <!-- testone -->
+                  <span class="method-name">testone</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testone">
+                  </a> <!-- testone -->
+                  <span class="method-name">testone</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testone">
+                  </a> <!-- testone -->
+                  <span class="method-name">testone</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testthree">
+                  </a> <!-- testthree -->
+                  <span class="method-name">testthree</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testtwo">
+                  </a> <!-- testtwo -->
+                  <span class="method-name">testtwo</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -176,13 +226,13 @@
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;SampleSuite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;SampleTest&quot;&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;edge&quot;/&gt;
+&lt;suite thread-count=&quot;2&quot; parallel=&quot;methods&quot; name=&quot;SampleSuite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;test thread-count=&quot;2&quot; parallel=&quot;methods&quot; name=&quot;ModuleOneTest&quot;&gt;
+    &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testScripts.Booksearchtest&quot;/&gt;
+      &lt;class name=&quot;parallelscripts.SampleneTest&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- SampleTest --&gt;
+  &lt;/test&gt; &lt;!-- ModuleOneTest --&gt;
 &lt;/suite&gt; &lt;!-- SampleSuite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -194,7 +244,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">SampleTest (1 class)</span>
+                <span class="test-name">ModuleOneTest (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -220,20 +270,44 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(8);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'storiesnovel')
-data.setCell(0, 2, 'testScripts.Booksearchtest')
-data.setCell(0, 3, 2203);
+data.setCell(0, 1, 'testthree')
+data.setCell(0, 2, 'parallelscripts.SampleneTest')
+data.setCell(0, 3, 3753);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'horrernovel')
-data.setCell(1, 2, 'testScripts.Booksearchtest')
-data.setCell(1, 3, 2131);
+data.setCell(1, 1, 'testtwo')
+data.setCell(1, 2, 'parallelscripts.SampleneTest')
+data.setCell(1, 3, 3612);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'testone')
+data.setCell(2, 2, 'parallelscripts.SampleneTest')
+data.setCell(2, 3, 81);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'testone')
+data.setCell(3, 2, 'parallelscripts.SampleneTest')
+data.setCell(3, 3, 11);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'testone')
+data.setCell(4, 2, 'parallelscripts.SampleneTest')
+data.setCell(4, 3, 8);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'testone')
+data.setCell(5, 2, 'parallelscripts.SampleneTest')
+data.setCell(5, 3, 6);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'testone')
+data.setCell(6, 2, 'parallelscripts.SampleneTest')
+data.setCell(6, 3, 5);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'testone')
+data.setCell(7, 2, 'parallelscripts.SampleneTest')
+data.setCell(7, 3, 3);
 window.suiteTableData['SampleSuite']= { tableData: data, tableDiv: 'times-div-SampleSuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-SampleSuite">
               </div> <!-- times-div-SampleSuite -->
             </div> <!-- times-div -->
@@ -259,33 +333,39 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testScripts.Booksearchtest</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">pre(edge)</span>
+              <div class="chronological-class-name">parallelscripts.SampleneTest</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">testthree</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">storiesnovel</span>
-                <span class="method-start">11061 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">toclose</span>
-                <span class="method-start">13271 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">pre(edge)</span>
-                <span class="method-start">13657 ms</span>
-              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">horrernovel</span>
-                <span class="method-start">23046 ms</span>
+                <span class="method-name">testone</span>
+                <span class="method-start">55 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">toclose</span>
-                <span class="method-start">25179 ms</span>
-              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">testone</span>
+                <span class="method-start">55 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testone</span>
+                <span class="method-start">63 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testone</span>
+                <span class="method-start">89 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testone</span>
+                <span class="method-start">106 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testone</span>
+                <span class="method-start">121 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testtwo</span>
+                <span class="method-start">203 ms</span>
+              </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
